--- a/_config.yml
+++ b/_config.yml
@@ -32,17 +32,9 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Mark Otto
-  url: https://twitter.com/mdo
-  email: markdotto@gmail.com
-
+  name: SmallPepperZ
 # Custom vars
 version: 3.0.0
 
 # Navbar page list
-nav:
-  - title: Blog
-    url: /archive
 
-  - title: About
-    url: /about
